--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,15 +17,18 @@ repository = "https://github.com/denisrosset/tybles.git"
 version = "0.2.0"
 
 [tool.poetry.dependencies]
-beartype = "^0.10.4"
 numpy = "^1.22.3"
 pandas = "^1.2.4"
 python = "^3.8,<3.11"
 
+beartype = {version = "^0.10.4", optional = true}
+ipykernel = {version = "^6.13.0", optional = true}
 myst-nb = {version = "^0.13.2", optional = true}
+pygments-csv-lexer = {version = "^0.1.3", optional = true}
 sphinx = {version = "4.3.2", optional = true}
 sphinx-autodoc-typehints = {version = "^1.17.0", optional = true}
 sphinx-book-theme = {version = "^0.2.0", optional = true}
+typeguard = {version = "^2.13.3", optional = true}
 
 [tool.poetry.extras]
 docs = [
@@ -33,7 +36,12 @@ docs = [
   "sphinx",
   "sphinx-autodoc-typehints",
   "sphinx-book-theme",
+  "pygments-csv-lexer",
+  "ipykernel",
 ]
+
+beartype = ["beartype"]
+typeguard = ["typeguard"]
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
@@ -74,6 +82,7 @@ warn_redundant_casts = true
 [tool.pytest.ini_options]
 addopts = [
   "--tb=short",
+  "-s", # show test "print" statements
 ]
 
 [tool.pylint.BASIC]
